downloaded student portfolio for refrence and finished the Challenges

--- a/One-Page Website/css/shared.css
+++ b/One-Page Website/css/shared.css
@@ -346,7 +346,7 @@ section {
     }
 }
 
-@media (min-width 1200px) {
+@media (min-width: 1200px) {
     .container {
         width: 1170px;
     }
